--- a/FlaskApp/templates/postindex2.html
+++ b/FlaskApp/templates/postindex2.html
@@ -34,12 +34,12 @@
             float: left;
             width: 45%;
             padding: 15px;
-            height: 300px;
+            height: 270px;
         }
         .row:after {
             content: "";
             clear: both;
-            height: 300px;
+            height: 270px;
         }
         body {
             color: white;
@@ -147,6 +147,7 @@
             <p> <b>To use:</b> Enter the data about the book you want to find in the text boxes above.
                 <br> When you are finished press enter or click submit.
                 <br> If the information is not found from the telegraph API, the text box on the right will display that the title and description cannot be found.
+                <br> Clicking the submit button under the description posts the data to a webpage, the link to which will appear under the button afterwards.
             </p>
         </footer>
     </div>
